--- a/index.html
+++ b/index.html
@@ -3,82 +3,114 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Послуги Прання</title>
+    <title>Пральня</title>
     <style>
         body {
-            font-family: 'Roboto', sans-serif;
+            font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
             background-color: #f4f4f4;
-            color: #333;
-        }
-        .container {
-            width: 90%;
-            max-width: 600px;
-            background: #fff;
-            padding: 20px;
-            margin: 20px 0;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            border-radius: 10px;
         }
         header {
+            background-color: #333;
+            color: #fff;
+            padding: 20px 0;
             text-align: center;
-            margin-bottom: 20px;
+            position: fixed;
+            width: 100%;
+            z-index: 1000;
         }
         header h1 {
-            font-size: 2em;
-            color: #007BFF;
+            margin: 0;
+            font-size: 24px;
         }
-        .box {
-            margin: 20px 0;
-            padding: 20px;
-            background: #e0e0e0;
-            border-radius: 8px;
-            transition: background 0.3s;
+        nav {
+            background-color: #444;
+            overflow: hidden;
         }
-        .box:hover {
-            background: #d4d4d4;
+        nav a {
+            float: left;
+            display: block;
+            color: #fff;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+            transition: background-color 0.3s ease;
         }
-        .box h2 {
-            margin-top: 0;
-            color: #007BFF;
+        nav a:hover {
+            background-color: #ddd;
+            color: black;
         }
-        .box p {
-            line-height: 1.6;
+        .content {
+            padding: 60px 20px;
         }
-        @media (max-width: 600px) {
-            .container {
-                padding: 15px;
+        section {
+            margin-bottom: 40px;
+        }
+        section h2 {
+            font-size: 20px;
+            margin-bottom: 10px;
+        }
+        section ul {
+            list-style: none;
+            padding: 0;
+        }
+        section ul li {
+            margin-bottom: 5px;
+        }
+        footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 10px 0;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+        @media (max-width: 768px) {
+            header {
+                position: static;
             }
-            header h1 {
-                font-size: 1.5em;
-            }
-            .box {
-                padding: 15px;
+            nav a {
+                float: none;
+                display: block;
+                text-align: left;
+                padding: 10px;
             }
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <header>
-            <h1>Послуги Прання</h1>
-        </header>
-        <div class="box">
-            <h2>Про нас</h2>
-            <p>Тут буде текст про вашу компанію.</p>
-        </div>
-        <div class="box">
-            <h2>Наші послуги</h2>
-            <p>Тут буде опис послуг, які ви надаєте.</p>
-        </div>
-        <div class="box">
+    <header>
+        <h1>Пральня</h1>
+    </header>
+    <nav>
+        <a href="#about">Про пральню</a>
+        <a href="#services">Послуги</a>
+        <a href="#contacts">Контакти</a>
+    </nav>
+    <div class="content">
+        <section id="about">
+            <h2>Про пральню</h2>
+            <p>Короткий опис вашої пральні.</p>
+        </section>
+        <section id="services">
+            <h2>Послуги</h2>
+            <ul>
+                <li>Стирка</li>
+                <li>Хімічна чистка</li>
+                <li>Ухажування за шкіряними та шовними виробами</li>
+            </ul>
+        </section>
+        <section id="contacts">
             <h2>Контакти</h2>
-            <p>Тут буде контактна інформація.</p>
-        </div>
+            <p>Адреса: your_address</p>
+            <p>Телефон: your_phone</p>
+            <p>Email: your_email</p>
+        </section>
     </div>
+    <footer>
+        <p>© 2023 Пральня</p>
+    </footer>
 </body>
 </html>
