--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FreshWash - Високоякісна пральна служба</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -34,10 +34,13 @@
         </section>
         <section id="contact">
             <h1>Контакти</h1>
-            <p><a href="mailto:qwefghjklgfd@gmail.com" class="email">Наша пошта для детальної інформації</a></p>
-            <p><a href="https://forms.gle/SCohjqGyqmBZ2xXx6" class="email">Замовити послугу</a></p>
+            <a class="email" href="mailto:qwefghjklgfd@gmail.com">Наша пошта для детальної інформації</a>
+            <a class="email" href="https://forms.gle/SCohjqGyqmBZ2xXx6">Замовити послугу</a>
         </section>
     </main>
+    <footer>
+        <p>&copy; 2023 FreshWash. Всі права захищені.</p>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
