--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         }
         section {
             background-color: #f7f7f7;
+            opacity: 0.8;
             padding: 1em;
             margin-bottom: 20px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -80,16 +81,6 @@
         }
         li {
             margin-bottom: 10px;
-        }
-        img {
-            width: 100%;
-            height: 200px;
-            object-fit: cover;
-            border-radius: 10px;
-            transition: all 0.3s ease-in-out;
-        }
-        img:hover {
-            transform: scale(1.1);
         }
         .email {
             color: #007bff;
@@ -121,7 +112,11 @@
     <main>
         <section id="about">
             <h1>Про нас</h1>
-            <p>Високоякісна пральна служба! Наша команда працює над забезпеченням вам найкращого досвіду у чищенні та догляді за одягом. Наш швидкісний сервіс поверне до вас одяг протягом 1-2 днів, з доставкою до камери.</p>
+            <ul>
+                <li>Високоякісна пральна служба!</li>
+                <li>Наша команда працює над забезпеченням вам найкращого досвіду у чищенні та догляді за одягом.</li>
+                <li>Наш швидкісний сервіс поверне до вас одяг протягом 1-2 днів, з доставкою до камери.</li>
+            </ul>>
         </section>
         <section id="services">
             <h1>Умови і ціни</h1>
