--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             border-bottom: 1px solid #fff;
             width: 100%;
+            height: 60%;
             box-sizing: border-box;
         }
         nav ul {
@@ -116,7 +117,7 @@
                 <li>Високоякісна пральна служба!</li>
                 <li>Наша команда працює над забезпеченням вам найкращого досвіду у чищенні та догляді за одягом.</li>
                 <li>Наш швидкісний сервіс поверне до вас одяг протягом 1-2 днів, з доставкою до камери.</li>
-            </ul>>
+            </ul>
         </section>
         <section id="services">
             <h1>Умови і ціни</h1>
