Visual Update index.html

--- a/index.html
+++ b/index.html
@@ -29,27 +29,26 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             border-bottom: 1px solid #fff;
             width: 100%;
-            height: 60%;
             box-sizing: border-box;
-          }
-          nav ul {
+        }
+        nav ul {
             list-style: none;
             margin: 0;
             padding: 0;
             display: flex;
-            justify-content: space-around;
-            height: 40px; /* зменшуємо висоту навігації */
-            align-items: center; /* вирівнюємо по центру вертикально */
-         }
-         nav li {
+            justify-content: space-around; /* відцентровані пункти навігації */
+            height: 40px; /* зменшення висоти навігації */
+            align-items: center; /* вирівнювання по центру вертикально */
+        }
+        nav li {
             margin-right: 10px;
-         }
-         nav a {
+        }
+        nav a {
             color: #fff;
             text-decoration: none;
             transition: all 0.3s ease-in-out;
         }
-            nav a:hover {
+        nav a:hover {
             transform: scale(1.1);
             color: #007bff;
         }
@@ -63,8 +62,7 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
         section {
-            background-color: #f7f7f7;
-            opacity: 0.8;
+            background-color: rgba(247, 247, 247, 0.8); /* прозорий фон */
             padding: 1em;
             margin-bottom: 20px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -75,7 +73,7 @@
         h1 {
             font-size: 24px;
             margin-bottom: 10px;
-            text-align: center; /* центрировать заголовки */
+            text-align: center; /* центровані заголовки */
         }
         ul {
             list-style: none;
@@ -86,16 +84,17 @@
             margin-bottom: 10px;
         }
         .email {
-    background-color: #007bff; /* синє тло для кнопок email */
-    color: #fff; /* білий текст */
-    padding: 10px 15px; /* внутрішні відступи */
-    border-radius: 5px; /* закруглені кути */
-    text-decoration: none;
-    border: 2px solid #0056b3; /* межа навколо кнопки */
-}
-.email:active {
-    background-color: #0056b3; /* темніший синій при натисканні */
-    border: 2px solid #003f7f; /* темніша межа при натисканні */
+            background-color: #007bff; /* синій фон для кнопок email */
+            color: #fff; /* білий текст */
+            padding: 10px 15px; /* внутрішні відступи */
+            border-radius: 5px; /* закруглені кути */
+            text-decoration: none;
+            border: 2px solid #0056b3; /* межа */
+        }
+        .email:active {
+            background-color: #0056b3; /* темний синій при натисканні */
+            border: 2px solid #003f7f; /* темніша межа при натисканні */
+        }
         footer {
             background-color: #333;
             color: #fff;
@@ -130,7 +129,7 @@
                 <li>Приготуйте пакет з номером камери</li>
                 <li>Перевіряйте кармани на стороні предмети</li>
                 <li>Вага пакета не більше 6 кілограмів</li>
-                <li>До пакету покладіть миючий засіб (пророк, рідкий порошок, капсула і т.д.)</li>
+                <li>До пакету покладіть миючий засіб (порошок, рідкий порошок, капсула і т.д.)</li>
                 <li>Послуга прання коштує пачка цигарок, якщо миючого засобу нема то ціна пачка хороших ліцензійних цигарок</li>
             </ul>
         </section>
